--- a/css/stylee.css
+++ b/css/stylee.css
@@ -338,7 +338,7 @@ option {
 .teklifler {
     padding: 10px 0 ;
     width: 100%;
-
+  
 }
 
 .card2 {
@@ -449,88 +449,111 @@ option {
 
 
 }
+.teklifler{
+   width: 100%;
+    margin: auto;
 
+}
 /* Top teklifler */
-.block {
-    padding: 20px;
-    margin: auto;
+.evler {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    padding: 20px 0;
     flex-wrap: wrap;
-  
 }
 
-.teklifler {
-
-    width: 100%;
-    margin: auto;
+.card-ev {
     display: flex;
     align-items: center;
+    width: 40%;
     justify-content: center;
     flex-direction: column;
-    font-size: .8em;
-
-}
-
-.cardteklif {
-   margin: 5px;
+    height: 100%;
     background: #fff;
-    padding: 10px;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 45%;
-    height: auto;
+    border-radius: 10px;
+    margin: 10px 10px;
 
 }
 
-.cardteklif h6 {
-    font-family: 'Montserrat';
-    font-weight: 500;
-    font-size: 1em;
+.ev-img {
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+    background: url("../img/silder1.png")center/cover;
+    height: 20vh;
+}
+
+.ev-img2 {
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+    background: url("../img/slider2.png")center/cover;
+    height: 20vh;
+}
+
+.ev-img3 {
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+    background: url("../img/slider3.png")center/cover;
+    height: 20vh;
+}
+
+.ev-img4 {
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+    background: url("../img/slidrer5.png")center/cover;
+    height: 20vh;
+}
+
+.ev-img h6 {
     color: #fff;
-    transform: translate(5px,-20px);
-
+    margin: 106px 2px;
+    font: 1.2em arial, sans-serif;
 }
 
-.cardteklif .teklifimg {
+.ev-img2 h6 {
+    color: #fff;
+    margin: 106px 2px;
+    font: 1.2em arial, sans-serif;
+}
+
+.ev-img3 h6 {
+    color: #fff;
+    margin: 106px 2px;
+    font: 1.2em arial, sans-serif;
+}
+
+.ev-img4 h6 {
+    color: #fff;
+    margin: 106px 2px;
+    font: 1.2em arial, sans-serif;
+}
+
+.ev-text {
+    text-align: left;
     width: 100%;
-    height: 100%;
+    padding: 15px;
+
 }
 
-.teklifimg img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.tekliftext .p1 {
-    font: 500 1em 'Montserrat';
+.ev-text p {
+    margin: 5px;
+    font: 1em 'Montserrat';
+    font-weight: 500;
     color: #000;
 
+
 }
 
-.tekliftext i {
+.citys {
+    font: .8em 'Montserrat' !important;
+    color: #676767;
+}
+
+.ev-text i {
+    margin: 5px;
     font-size: .7em;
 }
-
-.tekliftext {
-    width: 100%;
-}
-
-.arrows {
-    display: none;
-    position: absolute;
-    left: 1210px;
-    top: 1240px;
-
-}
-
 /* Site arasdir */
 .sitearasdir {
     background: #fff;
@@ -1319,62 +1342,119 @@ background: #635EBE;
     transition: .2s ease;
 } 
     /* Ev elan */
-    .block {
-        margin-top: 5px;
+    .evler {
         width: 100%;
         display: flex;
-        flex-direction: row;
         align-items: center;
         justify-content: center;
-
+        flex-direction: row;
+        padding: 20px 0;
     }
 
-    .cardteklif {
-        border-radius: 3px;
-        margin: 10px 20px;
+    .card-ev {
         display: flex;
         align-items: center;
+        width: 250px!important;
         justify-content: center;
         flex-direction: column;
-        width: 20%;
-        height: auto;
+        height: max-content;
         background: #fff;
-        padding: 0;
+        border-radius: 10px;
+
     }
 
-    .teklifimg {
-        width: 400px;
-        height: 260px;
+    
+
+    .ev-img h6 {
+
+
+        color: #fff;
+        margin: 106px 2px;
+        font: 1.2em arial, sans-serif;
     }
-.slider5{
-    width: 50%;
-    height: 20px;
-}
-    .teklifimg img {
+
+    .ev-text {
+        text-align: left;
         width: 100%;
-        height: 50%;
-        object-fit: cover;
+        padding: 15px;
+
     }
-  .tekliftext p,
-    .p1 {
+
+    .ev-text p {
         margin: 10px;
-    }
-.tekliftext h6{
-    font-size: 1.3em;}
-   
-    .tekliftext .p1 {
-        font: 500 1em 'Montserrat';
+        font: 1em 'Montserrat';
+        font-weight: 500;
         color: #000;
 
+
     }
 
-    .tekliftext i {
+    .citys {
+        font: .8em 'Montserrat' !important;
+        color: #676767;
+    }
+
+    .ev-text i {
         margin-left: 10px;
-        color: #333333;
         font-size: .8em;
-          margin-bottom: 10px;
+    }
+    .ev-img {
+        border-radius: 5px 5px 0 0;
+        width: 100%;
+        background: url("../img/slider3.png")center/cover;
+
+    }
+    .ev-img2 {
+        border-radius: 5px 5px 0 0;
+        width: 100%;
+        background: url("../img/slider2.png")center/cover;
+        height: 20vh;
     }
 
+    .ev-img3 {
+        border-radius: 5px 5px 0 0;
+        width: 100%;
+        background: url("../img/slider3.png")center/cover;
+        height: 20vh;
+    }
+
+    .ev-img4 {
+        border-radius: 5px 5px 0 0;
+        width: 100%;
+        background: url("../img/slidrer5.png")center/cover;
+        height: 20vh;
+    }
+
+    .ev-img h6 {
+        color: #fff;
+        margin: 106px 2px;
+        font: 1.2em arial, sans-serif;
+    }
+
+    .ev-img2 h6 {
+        color: #fff;
+        margin: 106px 2px;
+        font: 1.2em arial, sans-serif;
+    }
+
+    .ev-img3 h6 {
+        color: #fff;
+        margin: 106px 2px;
+        font: 1.2em arial, sans-serif;
+    }
+
+    .ev-img4 h6 {
+        color: #fff;
+        margin: 106px 2px;
+        font: 1.2em arial, sans-serif;
+    }
+.evbblock{
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: row;
+width: 100%;
+}
     /* Site arasdir */
     .sitearasdir {
         background: #fff;
@@ -1622,7 +1702,7 @@ background: #635EBE;
     }
 
     .socialicons i {
-        font-size: 1em;
+        font-size: 2em;
         color: #fff;
         margin-right: 20px;
     }
@@ -1646,6 +1726,24 @@ background: #635EBE;
     .copyrght {
         color: #fff;
         font: 1em 'Montserrat';
+        font-weight: 500;
+    }
+    .footercontainer h5 {
+        font-size: 1.2em !important;
+    }
+    .ftcard2text i {
+        font-size: 1.2em !important;
+        margin: 5px;
+    }
+    .ftcard2text p {
+        font-size: 1.2em !important;
+    }
+    
+    .footercard1 a {
+    
+        text-decoration: none;
+        color: #fff;
+        font: 1.5em 'Montserrat';
         font-weight: 500;
     }
 }
