--- a/css/stylee.css
+++ b/css/stylee.css
@@ -794,7 +794,7 @@ footer {
     font-size: .7em !important;
 }
 
-.footercard1 a {
+.footercard1 p {
 
     text-decoration: none;
     color: #fff;
