--- a/css/stylee.css
+++ b/css/stylee.css
@@ -360,7 +360,7 @@ option {
     align-items: center;
     justify-content: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
 
 }
@@ -368,41 +368,47 @@ option {
 .home {
     margin: 10px;
     text-align: left;
-    width: 100%;
-    height: 80%;
+    width: 50%;
+    height: max-content;
     justify-content: center;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-
+ 
+    background: #fff;
 }
 
 .image {
     margin: auto;
-    width: 320px;
-    height: 340px;
+    width: 100%;
+    height: 80%;
 }
 
 .home img {
 
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .hometext {
-    margin: 10px;
+    margin: 10px auto;
+    width: 100%;
 
 
 }
 
 .hometext ul {
     list-style: square;
-    font-size: .9em;
+    font-size: .8em;
+}
+.hometext ol {
+    
+    font-size: .8em;
 }
 
 .home h2 {
-    font: 15px 'Montserrat';
+    margin-left: 5px;
+    font: .8em 'Montserrat';
     font-style: normal;
     font-weight: 500;
     color: #000;
@@ -411,7 +417,8 @@ option {
 }
 
 .hometext p {
-    font: 1em/1.2 'Montserrat';
+    margin-left: 5px;
+    font: .9em/1.1 'Montserrat';
     color: #676767;
 
 
@@ -431,7 +438,7 @@ option {
     align-items: flex-end;
     justify-content: flex-end;
     float: right;
-    margin-top: 35px;
+    margin-top: 15px;
 }
 
 .btn a {
@@ -794,7 +801,7 @@ footer {
     font-size: .7em !important;
 }
 
-.footercard1 p {
+.footercard1 a {
 
     text-decoration: none;
     color: #fff;
@@ -816,6 +823,9 @@ footer a {
 .ftcard2text i {
     font-size: .9em !important;
     margin: 5px;
+}
+.ftcard2text p {
+   text-decoration: none;
 }
 
 .socials {
@@ -1204,31 +1214,41 @@ footer a {
 
     /* cardlar */
     .cards {
-        justify-content: center;
-        display: flex;
-        flex-direction: row;
-
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      width: 100%;
+      margin: auto;
     }
 
     .home {
-        margin: 10px;
+        background: #fff;
+        margin:  0 10px ;
         text-align: left;
-        width: 585px;
-        height: 340px;
+        width: 60%;
+        height: auto;
         justify-content: center;
         display: flex;
         flex-direction: row;
+        
     }
-
-    .home img {
-        width: 327px;
-        height: 100%;
-        object-fit: contain;
+.image{
+    
+    width:450px;
+    height: 430px ;
+    
+}
+    .image img {
+    
+        width: 100%;
+        height:100%;
+        object-fit: fill;
     }
 
     .hometext {
         margin: 10px;
-
+        width: 100%;
     }
 
     .hometext ul {
@@ -1242,7 +1262,7 @@ footer a {
     }
 
     .home h2 {
-        font: 15px 'Montserrat';
+        font: .9em 'Montserrat';
         font-style: normal;
         font-weight: 500;
         color: #000;
@@ -1251,7 +1271,7 @@ footer a {
 
     .hometext p {
         margin-left: 5px;
-        font: 1em 'Montserrat';
+        font: .8em 'Montserrat';
         color: #676767;
 
 
@@ -1261,7 +1281,7 @@ footer a {
         display: flex;
         align-items: flex-end;
         justify-content: flex-end;
-        float: right;
+       
         margin: 0 0 0 0;
     }
 
@@ -1270,7 +1290,7 @@ footer a {
         align-items: flex-end;
         justify-content: flex-end;
         float: right;
-        margin-top: 35px;
+        margin-top: 5px;
     }
 
     .btn a {
@@ -1286,18 +1306,7 @@ footer a {
         border-radius: 3px;
     }
 
-    .arrows {
-        display: block;
-        position: fixed;
-        left: 12px;
-        top: 120px;
 
-    }
-
-    .arrows button {
-        padding: 5px;
-        text-align: center;
-    }
 
     #lftbtn {
         width: 36px;
