--- a/css/stylee.css
+++ b/css/stylee.css
@@ -26,7 +26,22 @@ body {
     color: #fff;
 
 }
-
+#closed{
+    margin: 5px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    width: 13%;
+    
+}
+#closed button{
+    width:50%;
+    height: auto;
+    font-size: 20px;
+    background: #fff;
+    border-radius: 30px;
+    border: none;
+}
 #a1 {
 
     font-family: 'Montserrat';
@@ -791,6 +806,11 @@ flex-direction: column;
 margin-top: 20px;
 
 }
+.footer-cards img{
+    width: 25px;
+    height: auto;
+    margin-bottom: 13px;
+}
 .footer-cards h5{
 
 font-family: 'Montserrat';
@@ -798,6 +818,7 @@ font-style: normal;
 font-weight: 400;
 font-size: 1em;
 color: #FFFFFF;
+
 
 
 }
@@ -818,12 +839,12 @@ margin: 5px;
 
 }
 .footer-cards p i{
-    font-size: .8em;
+    font-size: .9em;
     margin: 5px;
 }
 .socialicons i{
     color: #fff;
-    font-size: 1em;
+    font-size: 1.5em;
 }
 .footerhr {
     margin: auto;
@@ -864,17 +885,34 @@ margin: 5px;
 
 
     }
-
-    .headtops {
+    .headtext{
+        width: 100%;
+    }
+#closed{
+    margin: 10px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    
+    width: 10%
+}
+#closed button{
+    width:30%;
+    font-size: 20px;
+    background: #fff;
+    border-radius: 20px;
+    border: none;
+}
+ .headtops {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content:space-between;
         width: 100%;
         background: #573391;
         padding: 10px;
     }
 
-    .headtops h1 {
+    .headtext h1 {
         font: 1.2em 'Montserrat';
         color: #fff;
 
@@ -1047,12 +1085,13 @@ margin: 5px;
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
-        margin-top: 20px;
+      
         font: 14px 'Montserrat';
         color: #585858;
         outline: none;
-        width: 100%;
+        width: 90%;
         overflow: hidden;
+        margin: 2px auto;
     }
 
     .formtext {
@@ -1061,7 +1100,8 @@ margin: 5px;
         justify-content: flex-start;
         flex-direction: row;
         padding: 10px;
-        width: 100%;
+        width: 90%;
+        margin: auto;
 
     }
 
@@ -1069,7 +1109,7 @@ margin: 5px;
         font: 14px 'Montserrat';
         padding: 5px;
         margin-right: 20px;
-        width: 50;
+        width: 55%;
         height: 40px;
         box-sizing: border-box;
         border: 1px solid #DADADA;
@@ -1083,7 +1123,7 @@ margin: 5px;
     option {
         font: 14px 'Montserrat';
         padding: 5px;
-        width: 50%;
+        width: 55%;
         height: 40px;
         border-radius: 3px;
         outline: none;
@@ -1107,34 +1147,36 @@ margin: 5px;
         height: 40px;
         border-radius: 3px;
         outline: none;
+    
 
     }
 
 
     .sections #btn1 {
         text-align: center;
-        font: 15px 'Montserrat';
+        font: 12px 'Montserrat';
         color: #fff;
-        width: 35%;
+        width: 30%;
         height: 40px;
         background: #635EBE;
         border-radius: 3px;
         color: #fff;
         border: none;
-        margin: 10px;
+        margin:5px;
 
 
     }
 
     .formtext #btn2 {
         margin: 10px;
-        width: 35%;
+        width: 30%;
         height: 40px;
         background: #4FD3C4;
         border-radius: 3px;
         font: 15px 'Montserrat';
         color: #fff;
         border: none;
+        transform: translateX(10px);
     }
 
     .sections button {
@@ -1221,14 +1263,14 @@ margin: 5px;
 
     .hometext ul {
         list-style: square;
-        font-size: .7em;
+        font-size: .9em;
     }
 .hometext li{
     font-size: .9em;
 }
     .hometext ol {
 
-        font-size: .7em;
+        font-size: .8em;
     }
 
     .home h2 {
@@ -1240,7 +1282,7 @@ margin: 5px;
 
     .hometext p {
         margin-left: 5px;
-        font: .7em 'Montserrat';
+        font: .8em 'Montserrat';
         color: #676767;
 
 
@@ -1400,26 +1442,27 @@ margin: 5px;
 
     .ev-img h6 {
         color: #fff;
-        margin: 106px 2px;
+        margin: 96px 10px;
         font: 1.2em arial, sans-serif;
     }
 
     .ev-img2 h6 {
         color: #fff;
-        margin: 106px 2px;
+        margin: 96px 10px;
         font: 1.2em arial, sans-serif;
     }
 
     .ev-img3 h6 {
         color: #fff;
-        margin: 106px 2px;
+        margin: 96px 10px;
         font: 1.2em arial, sans-serif;
     }
 
     .ev-img4 h6 {
         color: #fff;
-        margin: 106px 2px;
+        margin: 100px 10px;
         font: 1.2em arial, sans-serif;
+
     }
 
     .evbblock {
@@ -1590,7 +1633,7 @@ margin: 5px;
     .footercontent{
         width: 100%;
         display: flex;
-        align-items: center;
+   
         justify-content: space-around;
         flex-direction: row;
         padding: 5px;
@@ -1600,20 +1643,18 @@ margin: 5px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
     
 }
 .footer-cards h5{
-    text-align: left;
+
 font-family: 'Montserrat';
-font-style: normal;
 font-weight: 400;
 font-size: 22px;
-line-height: 27px;
 color: #FFFFFF;
-
-
 }
 .footer-cards a{
+
 text-decoration: none;
 font-family: 'Montserrat';
 font-style: normal;
@@ -1628,7 +1669,20 @@ font-weight: 500;
 font-size: 16px;
 color: #FFF;
 margin: 5px;
+text-align: left;
 
+}
+.footer-cards img{
+    width: 25px;
+    height: auto;
+    margin-bottom: 13px;
+}
+.socialicons i{
+    font-size: 25px;
+    margin-left: 10px;
+}
+.yuxariqalx{
+    transform:translate(0,-50px);
 }
    
 
@@ -1654,24 +1708,5 @@ margin: 5px;
         font-weight: 500;
     }
 
-    .footercontainer h5 {
-        font-size: 1.2em !important;
-    }
-
-    .ftcard2text i {
-        font-size: 1.2em !important;
-        margin: 5px;
-    }
-
-    .ftcard2text p {
-        font-size: 1.2em !important;
-    }
-
-    .footercard1 a {
-
-        text-decoration: none;
-        color: #fff;
-        font: 1.5em 'Montserrat';
-        font-weight: 500;
-    }
+    
 }
