--- a/css/stylee.css
+++ b/css/stylee.css
@@ -673,7 +673,102 @@ option {
     margin: 60px;
 }
 
+.wrapper {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+}
+
+.containerler {
+    height: 250px;
+    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+}
+
+.card {
+    width: 250px;
+    border-radius: .75rem;
+    background-size: cover;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 2rem;
+    margin: auto 10px;
+    display: flex;
+    align-items: flex-end;
+    transition: .6s cubic-bezier(.28,-0.03,0,.99);
+    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+}
+
+.card > .row {
+    color: white;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.card > .row > .icon {
+    background: #223;
+    color: white;
+    border-radius: 20%;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+}
+
+.card > .row > .description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    height: 80px;
+    width: 400px;
+    opacity: 0;
+    transform: translateY(40px);
+    transition-delay: .3s;
+    transition: all .3s ease;
+    margin-top: 16px;
+}
+
+.description p {
+    color: #ffff;
+    padding-top: 5px;
+}
+
+.description h4 {
+    text-transform: uppercase;
+}
+
+.silderinput {
+    display: none;
+}
+
+.silderinput:checked + label {
+    width: 400px;
+}
+
+.silderinput:checked + label .description {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+}
+
+.card[for="card1"] {
+    background-image: url('../img/site1.png');
+}
+.card[for="card2"] {
+    background-image:  url('../img/site2.png');
+}
+.card[for="card3"] {
+    background-image: url('../img/site3.png');
+}
+.card[for="card4"] {
+    background-image:  url('../img/site4.png');;
+}
 /* Satis teklif card */
 .satisblcok {
     margin: auto;
@@ -1531,8 +1626,99 @@ margin: 5px;
         text-align: center;
         margin: 60px;
     }
+/* Arasdirr */
+.wrapper {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.containerler {
+    height: 400px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start;
+}
 
+.card {
+    width: 80px;
+    border-radius: .75rem;
+    background-size: cover;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 2rem;
+    margin: 0 10px;
+    display: flex;
+    align-items: flex-end;
+    transition: .6s cubic-bezier(.28,-0.03,0,.99);
+    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+}
+
+.card > .row {
+    color: white;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.card > .row > .icon {
+    background: #223;
+    color: white;
+    border-radius: 50%;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+}
+
+.card > .row > .description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    height: 80px;
+    width: 520px;
+    opacity: 0;
+    transform: translateY(30px);
+    transition-delay: .3s;
+    transition: all .3s ease;
+}
+
+.description p {
+    color: #fff;
+    padding-top: 5px;
+}
+
+.description h4 {
+    text-transform: uppercase;
+}
+.silderinput{
+    display: none;
+}
+
+.silderinput:checked + label {
+    width: 600px;
+}
+
+.silderinput:checked + label .description {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+}
+
+.card[for="card1"] {
+    background-image: url('../img/site1.png');
+}
+.card[for="card2"] {
+    background-image:  url('../img/site2.png');
+}
+.card[for="card3"] {
+    background-image: url('../img/site3.png');
+}
+.card[for="card4"] {
+    background-image:  url('../img/site4.png');;
+}
     /* Satis teklif card */
     .satisblcok {
         padding: 20px;
@@ -1548,7 +1734,7 @@ margin: 5px;
 
         justify-content: center;
         flex-direction: row;
-        width: 585px;
+        width: 600px;
         height: 340px;
         background: #fff;
     }
@@ -1560,7 +1746,7 @@ margin: 5px;
     }
 
     .cardtexts {
-        margin: 10px;
+        margin: 15px;
 
     }
 
@@ -1572,9 +1758,8 @@ margin: 5px;
 
     .cardtexts p {
         font: 11px 'Montserrat';
-        color: #676767;
-
-    }
+        color: #676767;  
+    margin-left: 4px;  }
 
     .cardicons i {
         font-size: .5em;
