--- a/css/stylee.css
+++ b/css/stylee.css
@@ -26,22 +26,25 @@ body {
     color: #fff;
 
 }
-#closed{
+
+#closed {
     margin: 5px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
     width: 13%;
-    
+
 }
-#closed button{
-    width:50%;
+
+#closed button {
+    width: 50%;
     height: auto;
     font-size: 20px;
     background: #fff;
     border-radius: 30px;
     border: none;
 }
+
 #a1 {
 
     font-family: 'Montserrat';
@@ -595,7 +598,7 @@ option {
 .sitearasdir {
     background: #fff;
     width: 100%;
-    height: auto;
+    height: 40vh;
 }
 
 .siteblock {
@@ -604,7 +607,8 @@ option {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-height: auto;
+    height: auto;
+    overflow-x: hidden;
 }
 
 .sitetext {
@@ -621,11 +625,6 @@ height: auto;
     color: #000;
 }
 
-
-
-
-
-/* Satis teklif  */
 .satis {
     text-align: center;
     margin: 60px;
@@ -633,16 +632,16 @@ height: auto;
 
 .wrapper {
     width: 100%;
-    height: 37vh;
+    height: 45vh;
     display: flex;
     margin: auto;
     justify-content: center;
-   
+
 
 }
 
 .containerler {
-   
+
     height: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -650,26 +649,26 @@ height: auto;
 }
 
 .card {
-    width: 150px;
+    width: 100px;
     border-radius: .75rem;
     background-size: cover;
     cursor: pointer;
     overflow: hidden;
     border-radius: 2rem;
-    margin: auto 10px;
+    margin: 5px 10px;
     display: flex;
     align-items: flex-end;
-    transition: .6s cubic-bezier(.28,-0.03,0,.99);
-    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+    transition: .6s cubic-bezier(.28, -0.03, 0, .99);
+    
 }
 
-.card > .row {
+.card>.row {
     color: white;
     display: flex;
     flex-wrap: nowrap;
 }
 
-.card > .row > .icon {
+.card>.row>.icon {
     background: #223;
     color: white;
     border-radius: 20%;
@@ -680,7 +679,7 @@ height: auto;
     margin: 15px;
 }
 
-.card > .row > .description {
+.card>.row>.description {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -707,33 +706,37 @@ height: auto;
     display: none;
 }
 
-.silderinput:checked + label {
+.silderinput:checked+label {
     width: 400px;
 }
 
-.silderinput:checked + label .description {
+.silderinput:checked+label .description {
     opacity: 1 !important;
     transform: translateY(0) !important;
 }
 
 .card[for="card1"] {
     background-image: url('../img/site1.png');
-    
-   
+
+
 }
+
 .card[for="card2"] {
-    background-image:  url('../img/site2.png');
-    
-   
+    background-image: url('../img/site2.png');
+
+
 }
+
 .card[for="card3"] {
     background-image: url('../img/site3.png');
 
-    
+
 }
+
 .card[for="card4"] {
-    background-image:  url('../img/site4.png');
+    background-image: url('../img/site4.png');
 }
+
 /* Satis teklif card */
 .satisblcok {
     margin: auto;
@@ -849,8 +852,8 @@ footer {
 }
 
 
-.footercontent{
-        
+.footercontent {
+
     display: flex;
     justify-content: center;
     text-align: center;
@@ -859,53 +862,61 @@ footer {
     width: 100%;
 
 }
-.footer-cards{
-display: flex;
-justify-content: center;
-flex-direction: column;
-margin-top: 20px;
+
+.footer-cards {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 20px;
 
 }
-.footer-cards img{
+
+.footer-cards img {
     width: 25px;
     height: auto;
     margin-bottom: 13px;
 }
-.footer-cards h5{
 
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 400;
-font-size: 1em;
-color: #FFFFFF;
+.footer-cards h5 {
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1em;
+    color: #FFFFFF;
 
 
-
-}
-.footer-cards a{
-text-decoration: none;
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 500;
-font-size: 1em;
-color: #FFFFFF;
-}
-.footer-cards p{
-font-family: 'Montserrat';
-font-weight: 500;
-font-size: 1em;
-color: #FFF;
-margin: 5px;
 
 }
-.footer-cards p i{
+
+.footer-cards a {
+    text-decoration: none;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1em;
+    color: #FFFFFF;
+}
+
+.footer-cards p {
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 1em;
+    color: #FFF;
+    margin: 5px;
+
+}
+
+.footer-cards p i {
     font-size: .9em;
     margin: 5px;
 }
-.socialicons i{
+
+.socialicons i {
     color: #fff;
     font-size: 1.5em;
 }
+
 .footerhr {
     margin: auto;
     width: 100%;
@@ -945,28 +956,32 @@ margin: 5px;
 
 
     }
-    .headtext{
+
+    .headtext {
         width: 100%;
     }
-#closed{
-    margin: 10px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    
-    width: 10%
-}
-#closed button{
-    width:30%;
-    font-size: 20px;
-    background: #fff;
-    border-radius: 20px;
-    border: none;
-}
- .headtops {
+
+    #closed {
+        margin: 10px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+
+        width: 10%
+    }
+
+    #closed button {
+        width: 30%;
+        font-size: 20px;
+        background: #fff;
+        border-radius: 20px;
+        border: none;
+    }
+
+    .headtops {
         display: flex;
         align-items: center;
-        justify-content:space-between;
+        justify-content: space-between;
         width: 100%;
         background: #573391;
         padding: 10px;
@@ -1145,7 +1160,7 @@ margin: 5px;
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
-      
+
         font: 14px 'Montserrat';
         color: #585858;
         outline: none;
@@ -1207,7 +1222,7 @@ margin: 5px;
         height: 40px;
         border-radius: 3px;
         outline: none;
-    
+
 
     }
 
@@ -1222,7 +1237,7 @@ margin: 5px;
         border-radius: 3px;
         color: #fff;
         border: none;
-        margin:5px;
+        margin: 5px;
 
 
     }
@@ -1318,16 +1333,18 @@ margin: 5px;
 
     .hometext {
         margin: 10px;
-        width:60%;
+        width: 60%;
     }
 
     .hometext ul {
         list-style: square;
         font-size: .9em;
     }
-.hometext li{
-    font-size: .9em;
-}
+
+    .hometext li {
+        font-size: .9em;
+    }
+
     .hometext ol {
 
         font-size: .8em;
@@ -1591,99 +1608,106 @@ margin: 5px;
         text-align: center;
         margin: 60px;
     }
-/* Arasdirr */
-.wrapper {
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.containerler {
-    height: 400px;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: start;
-}
+    /* Arasdirr */
+    .wrapper {
+        width: 100%;
+        height: 80vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-.card {
-    width: 80px;
-    border-radius: .75rem;
-    background-size: cover;
-    cursor: pointer;
-    overflow: hidden;
-    border-radius: 2rem;
-    margin: 0 10px;
-    display: flex;
-    align-items: flex-end;
-    transition: .6s cubic-bezier(.28,-0.03,0,.99);
-    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
-}
+    .containerler {
+        height: 400px;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: start;
+    }
 
-.card > .row {
-    color: white;
-    display: flex;
-    flex-wrap: nowrap;
-}
+    .card {
+        width: 80px;
+        border-radius: .75rem;
+        background-size: cover;
+        cursor: pointer;
+        overflow: hidden;
+        border-radius: 2rem;
+        margin: 0 10px;
+        display: flex;
+        align-items: flex-end;
+        transition: .6s cubic-bezier(.28, -0.03, 0, .99);
+        box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+    }
 
-.card > .row > .icon {
-    background: #223;
-    color: white;
-    border-radius: 50%;
-    width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 15px;
-}
+    .card>.row {
+        color: white;
+        display: flex;
+        flex-wrap: nowrap;
+    }
 
-.card > .row > .description {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    overflow: hidden;
-    height: 80px;
-    width: 520px;
-    opacity: 0;
-    transform: translateY(30px);
-    transition-delay: .3s;
-    transition: all .3s ease;
-}
+    .card>.row>.icon {
+        background: #223;
+        color: white;
+        border-radius: 50%;
+        width: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 15px;
+    }
 
-.description p {
-    color: #fff;
-    padding-top: 5px;
-}
+    .card>.row>.description {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        height: 80px;
+        width: 520px;
+        opacity: 0;
+        transform: translateY(30px);
+        transition-delay: .3s;
+        transition: all .3s ease;
+    }
 
-.description h4 {
-    text-transform: uppercase;
-}
-.silderinput{
-    display: none;
-}
+    .description p {
+        color: #fff;
+        padding-top: 5px;
+    }
 
-.silderinput:checked + label {
-    width: 600px;
-}
+    .description h4 {
+        text-transform: uppercase;
+    }
 
-.silderinput:checked + label .description {
-    opacity: 1 !important;
-    transform: translateY(0) !important;
-}
+    .silderinput {
+        display: none;
+    }
 
-.card[for="card1"] {
-    background-image: url('../img/site1.png');
-}
-.card[for="card2"] {
-    background-image:  url('../img/site2.png');
-}
-.card[for="card3"] {
-    background-image: url('../img/site3.png');
-}
-.card[for="card4"] {
-    background-image:  url('../img/site4.png');;
-}
+    .silderinput:checked+label {
+        width: 600px;
+    }
+
+    .silderinput:checked+label .description {
+        opacity: 1 !important;
+        transform: translateY(0) !important;
+    }
+
+    .card[for="card1"] {
+        background-image: url('../img/site1.png');
+    }
+
+    .card[for="card2"] {
+        background-image: url('../img/site2.png');
+    }
+
+    .card[for="card3"] {
+        background-image: url('../img/site3.png');
+    }
+
+    .card[for="card4"] {
+        background-image: url('../img/site4.png');
+        ;
+    }
+
     /* Satis teklif card */
     .satisblcok {
         padding: 20px;
@@ -1723,8 +1747,9 @@ margin: 5px;
 
     .cardtexts p {
         font: 11px 'Montserrat';
-        color: #676767;  
-    margin-left: 4px;  }
+        color: #676767;
+        margin-left: 4px;
+    }
 
     .cardicons i {
         font-size: .5em;
@@ -1773,68 +1798,75 @@ margin: 5px;
 
     }
 
-   
+
     footer {
         background: #333333;
         width: 100%;
 
     }
 
-    .footercontent{
+    .footercontent {
         width: 100%;
         display: flex;
-   
+
         justify-content: space-around;
         flex-direction: row;
         padding: 5px;
     }
-.footer-cards{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
 
-    
-}
-.footer-cards h5{
+    .footer-cards {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
 
-font-family: 'Montserrat';
-font-weight: 400;
-font-size: 22px;
-color: #FFFFFF;
-}
-.footer-cards a{
 
-text-decoration: none;
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
-color: #FFFFFF;
-}
-.footer-cards p{
-font-family: 'Montserrat';
-font-weight: 500;
-font-size: 16px;
-color: #FFF;
-margin: 5px;
-text-align: left;
+    }
 
-}
-.footer-cards img{
-    width: 25px;
-    height: auto;
-    margin-bottom: 13px;
-}
-.socialicons i{
-    font-size: 25px;
-    margin-left: 10px;
-}
-.yuxariqalx{
-    transform:translate(0,-50px);
-}
-   
+    .footer-cards h5 {
+
+        font-family: 'Montserrat';
+        font-weight: 400;
+        font-size: 22px;
+        color: #FFFFFF;
+    }
+
+    .footer-cards a {
+
+        text-decoration: none;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 20px;
+        color: #FFFFFF;
+    }
+
+    .footer-cards p {
+        font-family: 'Montserrat';
+        font-weight: 500;
+        font-size: 16px;
+        color: #FFF;
+        margin: 5px;
+        text-align: left;
+
+    }
+
+    .footer-cards img {
+        width: 25px;
+        height: auto;
+        margin-bottom: 13px;
+    }
+
+    .socialicons i {
+        font-size: 25px;
+        margin-left: 10px;
+    }
+
+    .yuxariqalx {
+        transform: translate(0, -50px);
+    }
+
 
     .footerhr {
         margin: 20px auto;
@@ -1858,5 +1890,5 @@ text-align: left;
         font-weight: 500;
     }
 
-    
+
 }
