--- a/css/stylee.css
+++ b/css/stylee.css
@@ -598,7 +598,7 @@ option {
 .sitearasdir {
     background: #fff;
     width: 100%;
-    height: 40vh;
+    height: 390px;
 }
 
 .siteblock {
@@ -636,6 +636,7 @@ option {
     display: flex;
     margin: auto;
     justify-content: center;
+    overflow: hidden;
 
 
 }
@@ -651,6 +652,7 @@ option {
 .card {
     width: 100px;
     border-radius: .75rem;
+   
     background-size: cover;
     cursor: pointer;
     overflow: hidden;
@@ -1553,15 +1555,16 @@ footer {
     /* Site arasdir */
     .sitearasdir {
         background: #fff;
+        width: 100%;
+        height: 390px;
     }
-
     .siteblock {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: row;
         width: 100%;
-
+        
     }
 
     .testimg {
@@ -1575,7 +1578,7 @@ footer {
     }
 
     .sitetext {
-        width: 20%;
+        width: 40%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -1589,25 +1592,9 @@ footer {
         color: #000;
     }
 
-    .siteimgs img {
-        width: 138px;
-        height: 457px;
-        object-fit: cover;
-        border-radius: 5px;
+   
 
-    }
 
-    .siteblock #site1 {
-        width: 470px;
-        height: 450px;
-        object-fit: cover;
-    }
-
-    /* Satis teklif  */
-    .satis {
-        text-align: center;
-        margin: 60px;
-    }
 
     /* Arasdirr */
     .wrapper {
@@ -1619,10 +1606,11 @@ footer {
     }
 
     .containerler {
-        height: 400px;
+        height: 350px;
         display: flex;
         flex-wrap: nowrap;
         justify-content: start;
+        transform: translateY(-60px);
     }
 
     .card {
@@ -1636,7 +1624,7 @@ footer {
         display: flex;
         align-items: flex-end;
         transition: .6s cubic-bezier(.28, -0.03, 0, .99);
-        box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+       
     }
 
     .card>.row {
